force-app/main/default/objects/StudentMarks__c/StudentMarks__c.object-meta.xml
<CustomObject>
    <label>StudentMarks</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StudentMarks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>