force-app/main/default/objects/StudentMarks__c/fields/MarksNumber__c.field-meta.xml
<CustomField>
    <fullName>MarksNumber__c</fullName>
    <label>MarksNumber</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>