force-app/main/default/objects/StudentMarks__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Woodshop</fullName>
            </value>
            <value>
                <fullName>HomeEC</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Basketball</fullName>
            </value>
            <value>
                <fullName>AP Micro Biology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>