force-app/main/default/objects/StudentMarks__c/fields/Univname__c.field-meta.xml
<CustomField>
    <fullName>Univname__c</fullName>
    <formula>StudentMaster__r.University__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Univname</label>
    <type>Text</type>
</CustomField>